[package]
name = "jsyn"
version = "0.1.0"
authors = ["rfm <r@robertmasen.pizza>"]
edition = "2018"
description = "An experimental crate for converting rust to javascript"


[features]
"syn_tests" = [ "reqwest", "lazy_static" ]

[dependencies]
resast = { git = "https://github.com/FreeMasen/resast", branch = "next" }
syn = {version = "1", features = ["full", "extra-traits"]}
reqwest = { version = "0.9", optional = true }
lazy_static = { version = "1", optional = true }