[package]
name = "jsyn"
version = "0.1.0"
authors = ["rfm <r@robertmasen.pizza>"]
edition = "2018"
description = "An experimental crate for converting rust to javascript"

[dependencies]
resast = "0.4.0"
syn = {version = "1", features = ["full", "extra-traits"]}

[dev-dependencies]
resw = { git = "https://github.com/FreeMasen/resw", branch = "next" }
